--- a/lesson 8_18_02_21_cv/main.css
+++ b/lesson 8_18_02_21_cv/main.css
@@ -2,12 +2,16 @@
   font-family: 'Roboto', sans-serif;
 }
 
+.wrapper {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 header {
   background-color: #444444;
   color: white;
   height: 200px;
-  margin: -5px;
-  position: relative;
 }
 
 h1 {
@@ -22,18 +26,20 @@ h1 {
   padding-left: 20px;
   font-size: small;
   border-top: 1px white solid;
-  width: 7%;
+  width: 10%;
   padding-top: 20px;
-  margin-left: 666px;
+  margin-left: 48%;
+  text-align: center;
 }
 
 aside {
   background-color: #eee5e6;
   width: 20%;
-  height: 400%;
-  position: relative;
-  bottom: 150px;
-  margin-left: 30px;
+  float: left;
+  margin-right: 30px;
+  margin-top: -150px;
+  margin-left:15px;
+
 }
 
 .avatar img {
@@ -63,10 +69,9 @@ aside {
 }
 
 .info {
-  float: right;
-  width: 73%;
-  margin-top: -90%;
-  margin-right: 30px;
+  float: left;
+  width: 910px;
+  margin-top: 20px;
 }
 
 .text {
